# WebScraper

./: .gitignore  README.md  WebScraper.cabal
.github/workflows/: project.yml
src/: Analytics.hs  Charts.hs  DataFetcher.hs  HtmlFetcher.hs  Main.hs
