cabal-version:       2.4
name:                WebScraper
version:             0.1.0.0
build-type:          Simple
license:             MIT
synopsis:            Web scraper
category:            Web

executable WebScraper
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5,
                       http-conduit >= 2.3,
                       bytestring >= 0.10
  default-language:    Haskell2010
