cabal-version:       2.4
name:                WebScraper
version:             0.1.0.0
build-type:          Simple
license:             MIT
synopsis:            Advanced Currency Exchange Rate Analyzer
category:            Web

executable WebScraper
  main-is:             Main.hs
  other-modules:       DataFetcher, Analytics, Charts
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5,
                       http-conduit,
                       aeson,
                       bytestring,
                       text,
                       containers,
                       dotenv,
                       vector,
                       time,
                       statistics,
                       process,
                       directory,
                       filepath,
                       mtl
  default-language:    Haskell2010
  ghc-options:         -Wall